# bstore

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  DockerfileArm64  LICENSE.txt  README.md  docker.sh
.cargo/: config.toml
bstore/: Cargo.toml
bstore/src/: main.rs
bstore/src/cli/: bugreport.rs  client.rs  mod.rs  server.rs  version.rs
client/: Cargo.toml
client/src/: lib.rs  resource.rs
kernel/: Cargo.toml
kernel/src/: lib.rs
server/: Cargo.toml
server/src/: domain.rs  file_reply.rs  handlers.rs  lib.rs  sqlite.rs
server/tests/: rest_test.rs
src/: domain.rs  file_reply.rs  handlers.rs  lib.rs  main.rs  reader_stream.rs  sqlite.rs
src/tests/: rest_test.rs
tests/: rest_test.rs
