[workspace]
resolver = "2"
members = [
  "bstore",
  "client",
  "server",
  "kernel",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# to be able to run with `cargo run`, `check` and so on without selecting a specific package with `-p`
default-members = [
  "bstore",
]

[profile.release]
codegen-units = 1
strip = true
panic = 'abort'

[workspace.dependencies]
tokio = { version = "1", default-features = false }
tokio-util = { version = "0.7.12", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
utoipa = { version = "5.2.0", default-features = false }
reqwest = { version = "0.12", default-features = false }
hyper-util = { version = "0.1.10", default-features = false }
futures = "0.3"
url = "2.5.3"

[workspace.lints.rust]
unsafe_code = "forbid"
