[workspace]
resolver = "3"
members = [
  "bstore",
  "client",
  "server",
  "kernel",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# to be able to run with `cargo run`, `check` and so on without selecting a specific package with `-p`
default-members = [
  "bstore",
]

[profile.release]
codegen-units = 1
strip = true
panic = 'abort'

[workspace.dependencies]
tokio = { version = "1", default-features = false }
tokio-util = { version = "0.7.17", default-features = false }
serde = { version = "1.0", default-features = false }
utoipa = { version = "5.4.0", default-features = false }
reqwest = { version = "0.13", default-features = false }
futures = "0.3"
url = "2.5.7"

[workspace.lints.rust]
unsafe_code = "forbid"
