[package]
name = "bstore"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
client = { path = "../client" }
server = { path = "../server" }
clap = { version = "4.5.21", features = ["std", "color", "suggestions", "cargo"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
