[package]
name = "client"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel = { path = "../kernel" }
reqwest = { workspace = true, features = ["json", "multipart", "stream"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["full"] }
url = { workspace = true }
serde_json = { workspace = true }
url-escape = "0.1.1"
urlencoding = "2.1.3"
comfy-table = "7.1.1"

[dev-dependencies]
rstest = "0.21.0"

[lints]
workspace = true
