[package]
name = "client"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel = { path = "../kernel" }
reqwest = { workspace = true, features = ["json", "multipart", "stream"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["full"] }
url = { workspace = true }
url-escape = "0.1.1"
comfy-table = "7.1.3"

[dev-dependencies]
rstest = "0.23.0"

[lints]
workspace = true
