[package]
name = "client"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel = { path = "../kernel" }
reqwest = { workspace = true, features = ["json", "multipart", "stream", "rustls-tls"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["full"] }
url = { workspace = true }
url-escape = "0.1.1"
comfy-table = "7.2.1"

[dev-dependencies]
test-case = "3.3.1"

[lints]
workspace = true
