[package]
name = "server"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85.0"
description = "Small microservice that implementes blob storage with SQLite backend and simple REST API"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel = { path = "../kernel" }
tokio = { workspace = true, features = ["full"] }
futures-util = "0.3"
blake3 = "1.8"
zip = "=7.4.0"
axum = { version = "0.8.8", features = ["multipart"] }
tokio-util = { workspace = true, features = ["full"] }
futures = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
tower = { version = "0.5.3", features = ["util", "timeout"] }
tower-http = { version = "0.6.8", features = ["add-extension", "limit", "trace"] }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
rusqlite = { version = "0.38", features = ["bundled", "chrono", "blob", "fallible_uint"] }

[dev-dependencies]
test-case = "3.3.1"
reqwest = { workspace = true, features = ["json", "multipart", "stream"] }
test-context = "0.5.4"
uuid = { version = "1.20.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
rand = "0.10.0"
url-escape = "0.1.1"
serial_test = "3.3.1"
urlencoding = "2.1.3"

[lints]
workspace = true

[build-dependencies]
